@@ -1,5 +1,9 @@
 2008-06-29  Bradley M. Kuhn  <bkuhn@ebb.org>
 
+	* tests/test-upgrade.py.in
+	(PokerClientUpgradeCheckClientVersion.test01_CheckClientVersionRemote):
+	Added check for message() output from CheckClientVersion.__init__
+
 	* tests/testmessages.py: Added import of upgrade to put
 	upgrade.CheckClientVersion on the messages list.
 
